tests/trybuild/api_resource_fail_empty_name.stderr
error: ApiResource requires a non-empty resource name before `Resource`
 --> tests/trybuild/api_resource_fail_empty_name.rs:4:8
  |
4 | struct Resource {
  |        ^^^^^^^^
