tests/trybuild/api_resource_fail_empty_name.rs
use hubuum_client_derive::ApiResource;

#[derive(ApiResource)]
struct Resource {
    id: i32,
}

fn main() {}
